BUG: fix missing / unreadable close button on notifications

--- a/src/css/component/notifications/notifications-achievements.scss
+++ b/src/css/component/notifications/notifications-achievements.scss
@@ -124,6 +124,7 @@
 
 		&:hover {
 			color: #2a1030;
+			--icon-color: #2a1030;
 			background: #cb9fd7;
 		}
 	}
